Tests/CompilerTests/negative/invalid-modifier-1.hylo
//! no-std

static trait P {

  public type X

}

static struct A {

  static typealias Z = A

}

public extension A {

  public static public fun f0() {}

  static public fun f0() {}

}

public fun main() {
  indirect var x: Void
}
